# R-type-Epitech

./: CMakeLists.txt  README.md  conanfile.txt
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/: .gitignore
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/Client/: ConnectionServer.cpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/GameEngine/Entity/: Bullet.cpp  Obstacles.cpp  Player.cpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/GameEngine/Objet/: Background.cpp  Buttons.cpp  Icons.cpp  Text.cpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/GameEngine/Scenes/: Game.cpp  Lobby.cpp  Menu.cpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/Include/GameEngine/: ManageScene.hpp  TypeEnum.hpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/Include/GameEngine/Entity/: IEntity.hpp  Obstacles.hpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/Include/GameEngine/Objet/: Background.hpp  Buttons.hpp  Input.hpp  Text.hpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/Include/GameEngine/Scenes/: IScene.hpp  Menu.hpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/Include/Server/: Server.hpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/Include/Server/Map/: ObstaclesManager.hpp  PlayerManager.hpp
B-CPP-501-PAR-5-1-rtype-lal.joncoux-aydin-master/Server/: GameInstance.cpp
Client/: Client.cpp  main.cpp
Documentations/: Workflow.txt
GameEngine/: ManageElement.cpp  ManageScene.cpp
GameEngine/Objet/: Input.cpp
Include/Client/: Client.hpp  ConnectionServer.hpp
Include/GameEngine/: ManageElement.hpp
Include/GameEngine/Entity/: Bullet.hpp  Player.hpp
Include/GameEngine/Objet/: IObjet.hpp  Icons.hpp
Include/GameEngine/Scenes/: Game.hpp  Lobby.hpp
Include/Server/: GameInstance.hpp
Include/Server/Map/: BulletsManager.hpp
Server/: Server.cpp  main.cpp
